# msk_deg_2024

./: .gitignore  Cargo.toml  Dockerfile  bot.py  check_sid.py  config.py  database.py  database_fns.py  docker-compose.yaml  photos.py  requirements.txt
check_sid_bot_offline/: .dev.vars  README.md  wrangler.toml
check_sid_bot_offline/src/: entry.py  messages.py  telegram.py
check_sid_bot_v2/: Dockerfile  check_sid.py  database_fns.py  docker-compose.yaml  requirements.txt
grafana/: after_voting_dashboard.json  in_process_dashboard.json
moscow_deg_postgres_ingest/: Cargo.toml  certificate.pem
moscow_deg_postgres_ingest/src/: capitalize_json.rs  main.rs  voting_row.rs  voting_row_2023.rs  voting_row_2024.rs
src/: main.rs
