[package]
name = "postgres_ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-std = { version = "1.12", features = ["attributes"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
futures = "0.3"
postgres-native-tls = "0.5.0"
native-tls = "0.2"
glob = "0.3.0"
futures-util = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
async-channel = "2.2.0"
async-recursion = "1.0.5"
md5 = "0.7.0"
openssl = { version = "0.10.64", features = ["vendored"] }
